# django-project-template

./: .drone.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .hgignore  CHANGELOG.md  CookiecutterVariables.adoc  CookiecutterVariables.md  Justfile  LICENCE.md  Pipfile  README.md  cookiecutter.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tg-repository.yml  tox.ini  upgrade-template.py
extensions/: clean_appconfigname.py  (+4 more)
{{cookiecutter.repo_name}}/: .bumpversion.cfg  .coveragerc  .dockerignore  .drone.yml  .editorconfig  .env.cypress  .env.example  .gitignore  .gitlab-ci.yml  .hgignore  Dockerfile-django  Dockerfile-django.debian  Dockerfile-django.production  Dockerfile-django.production.debian  Dockerfile-node  Dockerfile-node.debian  Dockerfile-node.production  Dockerfile-node.production.debian  Dockerfile-pipenv  Dockerfile-poetry  Dockerfile-poetry.debian  MakeDrone  Makefile  Makefile-cypress  Pipfile  README.md  SPA.md  docker-compose-init.yml  docker-compose.codecept.yml  docker-compose.cypress.yml  docker-compose.production.yml  docker-compose.yml  ignored-vulnerabilities.txt  justfile  pyproject.toml  testtools.sh  tg-project.yaml  tg-repository.yml  wait-for-it.sh
{{cookiecutter.repo_name}}/.gitlab/merge_request_templates/: Bug.md  Feature.md
{{cookiecutter.repo_name}}/.helpers/: Dockerfile-black  Dockerfile-prettier
{{cookiecutter.repo_name}}/.idea_template/: misc.xml  modules.xml  vcs.xml  watchers.xml  webResources.xml
{{cookiecutter.repo_name}}/.idea_template/codeStyles/: Project.xml
{{cookiecutter.repo_name}}/.idea_template/runConfigurations/: Server.xml
{{cookiecutter.repo_name}}/ansible/: .gitignore  README.adoc  README.md  ansible-ci.cfg  ansible.cfg  autodeploy.adoc  autodeploy.yml  clone.adoc  clone.yml  deploy.adoc  deploy.yml  inventory  mirror-prepare.sh  mirror.adoc  mirror.yml  pyproject.toml  superuser.adoc  superuser.yml
{{cookiecutter.repo_name}}/ansible/docs/: enviorment.adoc  the_first_deploy.adoc  why_ansible.adoc
{{cookiecutter.repo_name}}/ansible/host_vars/: vars-template.yml  vault-template.yml
{{cookiecutter.repo_name}}/app/: .babelrc  .editorconfig  .env.development  .env.production  .eslintignore  .eslintrc  .eslintrc.js  .gitignore  .prettierrc  Makefile  README.md  SPA.md  cypress.config.js  i18n.json  jest.config.mjs  middleware.ts  next-i18next.config.js  next.config.js  package.json  pnpm-lock.yaml  razzle.config.js  scanner.config.js  tailwind.config.js  tsconfig.json
{{cookiecutter.repo_name}}/app-next/: .editorconfig  .eslintrc.json  .gitignore  jest.config.mjs  jest.setup.ts  middleware.ts  next-i18next.config.js  next.config.js  package.json  scanner.config.js  sentry.client.config.js  tailwind.config.js  tsconfig.json
{{cookiecutter.repo_name}}/app-next/components/: Calendar.tsx  Container.tsx  ForgotPasswordForm.tsx  Image.tsx  LanguageSwitcher.tsx  Layout.tsx  LoginForm.tsx  ResetPasswordForm.tsx  UserInfo.tsx
{{cookiecutter.repo_name}}/app-next/lib/: config.ts  convertError.ts  session.ts  store.ts  testUtils.tsx
{{cookiecutter.repo_name}}/app-next/mock/: i18next.tsx  nextRouter.ts
{{cookiecutter.repo_name}}/app-next/pages/: 404.tsx  500.tsx  _app.tsx  _document.tsx  about.tsx  error-test-page.tsx  index.tsx
{{cookiecutter.repo_name}}/app-next/scripts/: generate-env.js
{{cookiecutter.repo_name}}/app-next/styles/: globals.css
{{cookiecutter.repo_name}}/app-next/types/: i18next-resources.d.ts  i18next.d.ts  next.d.ts
{{cookiecutter.repo_name}}/app/components/: Container.tsx  LanguageSwitcher.tsx  Layout.tsx  LoginForm.tsx  UserInfo.tsx
{{cookiecutter.repo_name}}/app/lib/: config.ts  jwt.ts  session.ts  store.ts  utils.ts
{{cookiecutter.repo_name}}/app/pages/: 404.tsx  500.tsx  [...app].tsx  _app.tsx  _document.tsx  _error.tsx  about.tsx  error-test-page.tsx  new-index.tsx  user-details.tsx
{{cookiecutter.repo_name}}/app/scripts/: generate-env.js
{{cookiecutter.repo_name}}/app/src/: client.js  index.js  logger.js  settings.js  setupTests.js
{{cookiecutter.repo_name}}/app/types/: i18next.d.ts
{{cookiecutter.repo_name}}/cypress/: .gitignore  README.md  constants.js  cypress.json  reporter-config.json  reporter.js
{{cookiecutter.repo_name}}/cypress/integration/: admin.spec.js  home.spec.js  spa.auth.spec.js  webapp.auth.spec.js
{{cookiecutter.repo_name}}/cypress/plugins/: index.js
{{cookiecutter.repo_name}}/cypress/support/: commands.js  index.js
{{cookiecutter.repo_name}}/deploy/: crontab.conf  gunicorn.conf  logrotate.conf  nginx.conf  nginx_prod.conf
{{cookiecutter.repo_name}}/deploy/letsencrypt/: production.conf  staging.conf
{{cookiecutter.repo_name}}/deploy/nginx/: app.{{cookiecutter.repo_name}}.proxy.include  app.{{cookiecutter.repo_name}}.proxy_django.include  app.{{cookiecutter.repo_name}}.proxy_node.include  common.include  common.{{cookiecutter.repo_name}}.django.include  common.{{cookiecutter.repo_name}}.node.include  map_files.include  production.conf  production.ssl  staging.conf  staging.ssl
{{cookiecutter.repo_name}}/deploy/systemd/: gunicorn.service
{{cookiecutter.repo_name}}/docs/: just.adoc
{{cookiecutter.repo_name}}/requirements/: base.txt  local.txt  production.txt
{{cookiecutter.repo_name}}/scripts/: create-citext-extension.sql  django-dev-entrypoint.sh  generate-jwt-keypair.sh  generate_path.py  node-dev-entrypoint.sh  poetry-check-lock.sh
{{cookiecutter.repo_name}}/webapp/: .babelrc  .eslintignore  .eslintrc  .eslintrc.js  package.json  tsconfig.json
{{cookiecutter.repo_name}}/{{cookiecutter.django_folder_name}}/: conftest.py  manage.py
{{cookiecutter.repo_name}}/{{cookiecutter.project_backend_path}}/: .prospector.yaml  conftest.py  mypy.ini
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: .babelrc  .coveragerc  .eslintignore  .eslintrc  .prospector.yaml  MakeDrone  Makefile  __version__.py  bower.json  browserslist  config.rb  conftest.py  fabfile.py  gunicorn-settings.py  linttool.py  mypy.ini  package.json  pyproject.toml  pytest.ini  setup.cfg  webpack_constants.py  {{cookiecutter.repo_name}}-server.js
(+743 files in other folders)
