[tool.poetry]
name = "django-project-template"
version = "1.0"
description = "The Django project template"
authors = ["Thorgate <info@thorgate.eu>"]
repository = "https://gitlab.com/thorgate-public/django-project-template"

# NOTE:
# without this explicit reference to PyPI, poetry may raise exception "PackageNotFound".
[[tool.poetry.source]]
name = "the_pypi"
url = "https://pypi.org/simple"
default = true

[tool.poetry.dependencies]
python = "^3.7.0"

cookiecutter = "==1.7.*"
cookiecutter_repo_extensions = "==0.2.*"
docker = "==5.*"
fqdn = "==1.*"
stringcase = "==1.2.*"
ansible-vault = "^2.1.0"
git-url-parse = "==1.2.*"

[tool.poetry.dev-dependencies]
black = "==22.3.0"
pyyaml = "^6"
pytest = "==7.*"
pytest-env = "*"
pytest-cookies = "==0.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | docs
  )/
  | fabfile.py
  | local.py
  | local_test.py
)
'''
