[tool.poetry]
name = "django-project-template"
version = "1.0"
description = "The Django project template"
authors = ["Thorgate <info@thorgate.eu>"]
repository = "https://gitlab.com/thorgate-public/django-project-template"
# When poetry is updated to 1.8+, uncomment the following line
# package-mode = false

# NOTE:
# without this explicit reference to PyPI, poetry may raise exception "PackageNotFound".
[[tool.poetry.source]]
name = "the_pypi"
url = "https://pypi.org/simple"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.7.0"

cookiecutter = "==1.7.*"
cookiecutter_repo_extensions = "==0.2.*"
docker = "^5.0.3"
fqdn = "==1.*"
stringcase = "==1.2.*"
# It s dep for ansible-vault, but adding it here, makes locking a lot faster
ansible = "^4.10.0"
ansible-vault = "^2.1.0"
git-url-parse = "==1.2.*"

[tool.poetry.dev-dependencies]
ruff = "0.1.5"
pyyaml = "^6"
pytest = "^7"
pytest-env = "^0.8.1"
pytest-cookies = "==0.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
