[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "1.0"
description = "{{ cookiecutter.project_title }}"
license = "Proprietary" # or "MIT"
authors = ["{{ cookiecutter.live_domain_name }} <{{ cookiecutter.admin_email }}>"]
repository = "{{ cookiecutter.gitlab_repo_url }}"

# NOTE:
# without this explicit reference to PyPI, poetry may raise exception "PackageNotFound".
[[tool.poetry.source]]
name = "the_pypi"
url = "https://pypi.org/simple"
priority = "default"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

# - {% if cookiecutter.include_celery == YES %}
celery = {version = "==5.2.*", extras = ["redis"]}
# - {% endif %}
Django = "==4.0.*"
# - {%- if cookiecutter.x_frame_options == "DENY" %}
django-csp = "^3.7"
# - {% endif %}
environs = "^9.5.0"
dj-database-url = "^2.1.0"
django-redis = "==5.2.*"
# - {%- if cookiecutter.django_media_engine == GCS %}
django-storages = { version = "==1.*", extras = ["google"] }
# - {% elif cookiecutter.django_media_engine == S3 %}
boto3 = "^1.28.44"
django-storages = { version = "==1.*" }
# - {%- endif %}
gunicorn = "^20.1"
# - {%- if cookiecutter.docker_base_image == 'alpine' %}
# If you change the docker base image to be non-alpine
# This can be changed to psycopg2-binary to get advantage from
# using wheels
psycopg2 = "==2.9.*"
# - {%- else %}
psycopg2-binary = "==2.9.*"
# - {%- endif %}
sentry-sdk = "^1.30"
redis = "^5"
# - {% if cookiecutter.frontend_style == WEBAPP %}
django-crispy-forms = "==1.11.*"
django-reverse-js = "==0.1.3"
django-settings-export = "==1.2.*"
django-webpack-loader = "==1.4.*"
# - {% elif cookiecutter.frontend_style == SPA %}
djangorestframework = "==3.13.*"
djangorestframework_simplejwt = "==5.1.*"
django-cors-headers = "==3.11.*"
django-filter = "==21.*"
tg-react = "==3.*"
# - {% endif %}
tg-utils = {version = "^1.0.1 ", extras = ["model-hash", "health_check"]}

# - {% if cookiecutter.include_wagtail == YES %}
wagtail = "^5.1.1"
django-model-utils = "^4.3.1"
django-hijack = "^3.2.1"
# - {% endif %}

# - {% if cookiecutter.include_websockets == YES %}
channels = {extras = ["daphne"], version = "^4.0.0"}
channels-redis = "^4"
uvicorn = { version = "0.23.*", extras = ["standard"] }
# - {% endif %}

[tool.poetry.dev-dependencies]
black = "==22.12.0"
django-debug-toolbar = "^4.2"
# Testing & quality tools
coverage = "==7.*"
ipdb = "^0.13.13"
pip-audit = ">=2.6.1"
isort = "^5"
# Note prospector is very picky about its dependencies,
# avoid specifying versions for pylint/pylint-django/astroid
# and let prospector determine which versions work together
prospector = {version = "^1.10.2", extras=["with_bandit"]}
# Excplicit pylint dependency should be removed once https://github.com/PyCQA/prospector/pull/530 is released
pylint = "<2.15.7"
pytest = "==7.*"
pytest-django = "*"
pytest-cov = "*"
pytest-mock = "*"
pylint-django = "*"
model-bakery = "*"
freezegun = "*"
# - {% if cookiecutter.use_mypy == YES %}
# MyPy dependencies
types-freezegun = "*"
boto3-stubs = "*"
django-stubs = "*"
djangorestframework-stubs = "*"
mypy = "*"
# - {% endif %}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
# Enable specific Python version if necessary:
# target-version = ['py38']
line-length = 88
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | docs
    | cover
  )/
  | local.py
  | local_test.py
)
'''

[tool.isort]
skip = "settings/local.py,settings/local_test.py,{{cookiecutter.default_django_app}}/wsgi.py"
skip_glob = "node_modules"
line_length = '88'
atomic = 'true'
multi_line_output = '3'
include_trailing_comma = 'true'
force_grid_wrap = '0'
use_parentheses = 'true'
ensure_newline_before_comments = 'true'
known_django = "django"
known_pytest = "pytest"
overwrite_in_place = 'true'
known_first_party = "accounts,{{cookiecutter.default_django_app}},settings"
lines_between_types = '0'
sections = "FUTURE,STDLIB,DJANGO,PYTEST,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
lines_after_imports = '2'
force_alphabetical_sort_within_sections = '1'

[tool.coverage.run]
branch = true
relative_files = true
omit = [
    "*test*",
    "*migrations*",
    "manage.py",
    "{{cookiecutter.default_django_app}}/urls.py",
    "{{cookiecutter.default_django_app}}/celery.py",
    "{{cookiecutter.default_django_app}}/celery_settings.py",
    "{{cookiecutter.default_django_app}}/storages.py",
    "{{cookiecutter.default_django_app}}/wsgi.py",
    "settings/*",
]

[tool.coverage.html]
directory = "cover"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--junit-xml report.xml"
DJANGO_SETTINGS_MODULE = "settings.local_test"
markers = ["django_db", "parametrize", "unit"]
norecursedirs = [
    "migrations",
    ".data",
# - {% if cookiecutter.frontend_style == SPA %}
    "app",
# - {% elif cookiecutter.frontend_style == WEBAPP %}
    "webapp",
# - {% endif %}
    "node_modules",
]
python_files = ["test_*.py", "tests/*.py", "tests.py"]
