[tool.poetry]
name = "{{ cookiecutter.repo_name }}-ansible"
version = "1.0.0"
description = "Ansible scripts for {{ cookiecutter.project_title }} deployment"
authors = ["Thorgate <hi@thorgate.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^5.7"


[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
